overflow-x hidden on body to avoid side-scrolling because of nav menu

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -53,6 +53,7 @@ body {
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
 section {
